--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2894,7 +2894,7 @@ input, select, textarea {
 	}
 
 	ul.icons.alt li .icon:before {
-		box-shadow: inset 0 0 0 2px #eeeeee;
+		box-shadow: inset 0 0 0 2px #06546b;
 	}
 
 	ul.icons.alt li a.icon:hover:before {
